k8s/sfs-postgres.yaml
apiVersion: apps/v1 
kind: StatefulSet
metadata:
  name: sfs-postgres
  namespace: gestionorquestas
spec:
  replicas: 2
  selector:  
    matchLabels:
      app: postgressapp
  serviceName: mysql-service
  template:  
    metadata:
      labels:
        app: postgressapp
    spec:
      containers:
      - name: postgressapp
        image: postgres
        ports:
        - containerPort: 3306
