k8s/service-orquestas-back.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: gestionorquestas
spec:
  type: NodePort
  ports:
  - port: 8080
  selector:
     app: orquestasbackapp
