k8s/service-orquestas-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: gestionorquestas
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
     app: orquestasfrontapp
