k8s/service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: gestionorquestas
  labels:
     app: postgressapp
spec:
  ports:
  - port: 5432
  selector:
     app: postgressapp
