k8s/ingress-weekly.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: ingress-weekly
   namespace: gestionorquestas
   annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
   ingressClassName: nginx
   rules:
   - http:
       paths:
       - path: /frontend(/|$)(.*)
         pathType: Prefix
         backend:
           service:
             name: frontend
             port:
               number: 80
       - path: /backend(/|$)(.*)
         pathType: Prefix
         backend:
           service:
             name: backend
             port:
               number: 8080
